# eestv

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
.github/: copilot-instructions.md
apps/slayerlog/: CMakeLists.txt  command_palette_controller.cpp  command_palette_model.hpp  log4cplus.ini  log_controller.cpp  log_controller.hpp  log_model.cpp  log_model.hpp  log_text_view.cpp  log_text_view.hpp  log_view.cpp  log_view.hpp  main.cpp  master_view.cpp  master_view.hpp  view_theme.hpp
code/: CMakeLists.txt
code/eestv/: DiscoverableTcpSocket.cpp  DiscoverableTcpSocket.hpp  DiscoveringTcpSocket.cpp  DiscoveringTcpSocket.hpp  discoverable.hpp  discoverable_tcp_socket.cpp  discoverable_tcp_socket.hpp  discovering_tcp_socket.cpp  spinlock_mutex.hpp  udp_discovery_client.cpp  udp_discovery_client.hpp
code/eestv/net/: discoverable.cpp  discoverable_tcp_socket.cpp  discoverable_tcp_socket.hpp  discovering_tcp_socket.cpp  discovering_tcp_socket.hpp  udp_discovery_client.cpp  udp_discovery_client.hpp  udp_discovery_server.cpp  udp_discovery_server.hpp
code/eestv/threading/: spinlock_mutex.hpp
docs/eestv/net/: guide.md  tcp_rename_refactor.md
docs/eestv/serial/: guide.md
examples/: CMakeLists.txt
examples/data_bridge/: CMakeLists.txt  main.cpp
examples/net/discovery/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/net/tcp_connection/: main.cpp
examples/overloading/: CMakeLists.txt  complex.cpp  complex.hpp
examples/sfinae/: CMakeLists.txt  decltype_declval_string.hpp  flying_robot.hpp  main.cpp  make_robot_do_something.hpp  robot_mover.hpp  walking_robot.hpp
examples/spinlock_mutex/: CMakeLists.txt  main.cpp
examples/templates/: CMakeLists.txt  main.cpp  matrix.hpp  max.hpp  templated_executable1.hpp  templated_executable2.hpp  templated_executor.hpp  vector.hpp
tests/unit_tests/: CMakeLists.txt  DiscoverableSocketTests.cpp  discoverable_socket_tests.cpp  udp_discovery_server_tests.cpp  udp_discovery_tests.cpp
tests/unit_tests/data/: linear_buffer_tests.cpp
tests/unit_tests/data_bridge/: data_bridge_cli_tests.cpp
tests/unit_tests/net/: discoverable_socket_tests.cpp  keep_alive_callback_tests.cpp  tcp_connection_tests.cpp  udp_discovery_server_tests.cpp  udp_discovery_tests.cpp
tests/unit_tests/net/connection/: io_context_debugger.hpp  tcp_connection_tests.cpp  tcp_server_life_cycle.cpp
tests/unit_tests/net/discovery/: discovery_integration_tests.cpp
tests/unit_tests/serial/: serialization_tests.cpp
tests/unit_tests/slayerlog/: command_palette_controller_tests.cpp  log_controller_tests.cpp  log_model_tests.cpp  log_view_tests.cpp
